--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI_DB=mongodb+srv://sta11k:sta11k@cluster0.v72fx.mongodb.net/db-contacts
+URI_DB=mongodb+srv://<LOGIN>:<PASSWORD>@cluster0.v72fx.mongodb.net/db-contacts
