fix env, regular

--- a/.examlpe.env
+++ b/.examlpe.env
@@ -1,1 +1,5 @@
-URI_DB={Add your connection string MongoDB Atlas}
+URI_DB=mongodb+srv://<DB_USER>:<DB_USER_PASS>@cluster0.ldebl.mongodb.net/<DB_NAME>?retryWrites=true&w=majority
+DB_USER=sta11k
+DB_USER_PASS=sta11k
+DB_NAME=db-contacts
+JWT_SECRET_KEY=
