--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "morgan": "1.10.0"
