--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
+    "express-rate-limit": "^6.0.5",
+    "helmet": "^5.0.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
