--- a/.examlpe.env
+++ b/.examlpe.env
@@ -2,4 +2,6 @@ URI_DB=mongodb+srv://<DB_USER>:<DB_USER_PASS>@cluster0.ldebl.mongodb.net/<DB_NAM
 DB_USER=sta11k
 DB_USER_PASS=sta11k
 DB_NAME=db-contacts
-JWT_SECRET_KEY=
+JWT_SECRET_KEY=ambrela
+UPLOAD_DIR=
+FOLDER_FOR_AVATARS =
