--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
     "express-rate-limit": "^6.0.5",
+    "gravatar": "^1.8.2",
     "helmet": "^5.0.1",
+    "jimp": "^0.16.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "eslint": "7.19.0",
