--- a/.examlpe.env
+++ b/.examlpe.env
@@ -7,4 +7,4 @@ UPLOAD_DIR=
 FOLDER_FOR_AVATARS =
 CLOUD_NAME=https://cloudinary.com/
 API_KEY=https://cloudinary.com/
-API_SECRET=https://cloudinary.com/
+API_SECRET=https://cloudinary.com
