--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --coverage"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.28.1",
     "cors": "2.8.5",
@@ -23,10 +24,12 @@
     "jimp": "^0.16.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.16",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "morgan": "1.10.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
